# AgenticIntelligence

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
agents/: agent_analysis.py  agent_scraper.py  langgraph_flow.py  qa_chatbot.py  report_generator.py
agents/data/: rastah_products.csv  rastah_scraped_urls.txt
frontend/static/css/: styles.css
frontend/static/js/: analysis.js  auth.js  main.js  qa.js  reports.js  scraper.js
frontend/templates/: analysis.html  base.html  dashboard.html  history.html  login.html  qa.html  register.html  reports.html  scraper.html
